@@ -4868,6 +4868,32 @@ std::string CWebServer::GetJSonPage()
 				}
 			}
 		}
+		else if (cparam=="getactualhistory")
+		{
+			root["status"]="OK";
+			root["title"]="GetActualHistory";
+
+			std::string historyfile = szStartupFolder + "History.txt";
+
+			std::ifstream infile;
+			int ii=0;
+			infile.open(historyfile.c_str());
+			std::string sLine;
+			if (infile.is_open())
+			{
+				while (!infile.eof())
+				{
+					getline(infile, sLine);
+					root["LastLogTime"]="";
+					if (sLine.find("Version ")==0)
+						root["result"][ii]["level"]=1;
+					else
+						root["result"][ii]["level"]=0;
+					root["result"][ii]["message"]=sLine;
+					ii++;
+				}
+			}
+		}
 		else if (cparam=="emailcamerasnapshot")
 		{
 			std::string camidx=m_pWebEm->FindValue("camidx");
