@@ -262,6 +262,7 @@ cam.html
 dashboard.html
 devices.html
 hardware.html
+history.html
 lights.html
 log.html
 scenes.html
