@@ -216,6 +216,11 @@ $(document).ready(function() {
 		}
 	}
 
+	$("#appversion").click( function( e ) {
+		e.preventDefault();
+		SwitchLayout('History');
+	});
+	
 	//Highcharts.getOptions().exporting.buttons.contextButton.menuItems.push({
 	//	text: 'Download CSV',
 	//	onclick: function () {
@@ -367,7 +372,7 @@ $(document).ready(function() {
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-										<a class="brand" href="javascript:SwitchLayout('Dashboard')"><h1>Domoticz</h1> <h2 id="appversion">*</h2></a>
+					<a class="brand" href="javascript:SwitchLayout('Dashboard')"><h1>Domoticz</h1> <h2 id="appversion">*</h2></a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li id="mDashboard"><a id="cDashboard" href="javascript:SwitchLayout('Dashboard')"><img src="images/desktop.png"> Dashboard</img></a></li>
